<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3ECEC">

    <ImageView
        android:id="@+id/image_bg_top"
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:src="@drawable/top_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/my_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"/>

    <TextView
        android:id="@+id/text_my_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/image_profile"
        app:layout_constraintStart_toStartOf="@+id/image_profile"
        app:layout_constraintTop_toBottomOf="@id/image_profile"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/text_my_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_email"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/text_my_name"
        app:layout_constraintStart_toStartOf="@+id/text_my_name"
        app:layout_constraintTop_toBottomOf="@id/text_my_name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bg_white_constraint"
        android:layout_width="350dp"
        android:layout_height="420dp"
        android:background="@drawable/white_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/text_my_email" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:shadowColor="#837F7F"
            android:text="@string/my_profile"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/first_name"
            android:textColor="@color/purple_700"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/bg_white_constraint"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/first_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/first_name1"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/first_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.898"
            app:layout_constraintStart_toEndOf="@+id/first_name"
            app:layout_constraintTop_toTopOf="@id/first_name"/>

        <View
            android:id="@+id/view_line1"
            android:layout_width="315dp"
            android:layout_height=".5dp"
            android:layout_marginTop="16dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_name" />

        <TextView
            android:id="@+id/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/last_name"
            android:textColor="@color/purple_700"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/bg_white_constraint"
            app:layout_constraintTop_toBottomOf="@+id/view_line1" />

        <TextView
            android:id="@+id/last_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/last_name2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.898"
            app:layout_constraintStart_toEndOf="@+id/first_name"
            app:layout_constraintTop_toTopOf="@id/first_name"
            app:layout_constraintVertical_bias="1.0" />

        <View
            android:id="@+id/view_line2"
            android:layout_width="315dp"
            android:layout_height=".5dp"
            android:layout_marginTop="16dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/last_name" />

        <TextView
            android:id="@+id/text_major"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/major"
            android:textColor="@color/purple_700"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/bg_white_constraint"
            app:layout_constraintTop_toBottomOf="@+id/view_line2" />

        <TextView
            android:id="@+id/text_major1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/major2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/text_major"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.901"
            app:layout_constraintStart_toEndOf="@+id/text_major"
            app:layout_constraintTop_toTopOf="@id/view_line2"
            app:layout_constraintVertical_bias="1.0" />

        <View
            android:id="@+id/view_line3"
            android:layout_width="315dp"
            android:layout_height=".5dp"
            android:layout_marginTop="16dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_major" />

        <TextView
            android:id="@+id/text_class1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/class1"
            android:textColor="@color/purple_700"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/bg_white_constraint"
            app:layout_constraintTop_toBottomOf="@+id/view_line3" />

        <TextView
            android:id="@+id/text_class2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/class2"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.887"
            app:layout_constraintStart_toEndOf="@+id/text_class1"
            app:layout_constraintTop_toTopOf="@+id/view_line3" />

        <View
            android:id="@+id/view_line4"
            android:layout_width="315dp"
            android:layout_height=".5dp"
            android:layout_marginTop="16dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_class1" />

        <TextView
            android:id="@+id/text_study"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/education"
            android:textColor="@color/purple_700"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/bg_white_constraint"
            app:layout_constraintTop_toBottomOf="@+id/view_line4" />

        <TextView
            android:id="@+id/text_study1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/education1"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.887"
            app:layout_constraintStart_toEndOf="@+id/text_class1"
            app:layout_constraintTop_toTopOf="@+id/view_line4" />

        <View
            android:id="@+id/view_line5"
            android:layout_width="315dp"
            android:layout_height=".5dp"
            android:layout_marginTop="16dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_study1" />

        <TextView
            android:id="@+id/text_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/address"
            android:textColor="@color/purple_700"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/bg_white_constraint"
            app:layout_constraintTop_toBottomOf="@+id/view_line5" />

        <TextView
            android:id="@+id/text_address1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Address1"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.887"
            app:layout_constraintStart_toEndOf="@+id/text_class1"
            app:layout_constraintTop_toTopOf="@+id/view_line5" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_edit"
        android:text="@string/button"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@id/bg_white_constraint"
        app:layout_constraintStart_toStartOf="@id/bg_white_constraint"
        app:layout_constraintTop_toBottomOf="@+id/bg_white_constraint" />



</androidx.constraintlayout.widget.ConstraintLayout>